# DocuSense

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  uv.toml
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  ask.py  asl.py  auth.py  health.py  items.py  qa.py  upload.py
app/core/: __init__.py  config.py  rate_limiter.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  document.py  document_chunk.py  session.py
app/schemas/: __init__.py  document.py  item.py  qa.py  session.py
app/services/: __init__.py  document_service.py  embedding_service.py  model_loader.py  qa_service.py  session_service.py  text_extraction_service.py
scripts/: init-db.sql
tests/: __init__.py  conftest.py  test_ask_endpoint.py  test_asl_endpoint.py  test_auth.py  test_health.py  test_items.py  test_main.py  test_qa_endpoint.py  test_qa_service.py  test_text_extraction.py  test_upload.py
tests/fixtures/: generate_fixtures.py  sample_contract.txt  sample_document.txt  sample_invoice.txt
